MCA App/Release/MCA Dev Org/src/objects/ACH_Transaction_Log__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_Date__c</fullName>
        <label>Log Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>Payment</label>
        <referenceTo>Payment__c</referenceTo>
        <relationshipLabel>ACH Transaction Logs</relationshipLabel>
        <relationshipName>ACH_Transaction_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Response_Code__c</fullName>
        <label>Response Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>ACH Transaction Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Error_Code__c</columns>
        <columns>Log_Date__c</columns>
        <columns>Response_Code__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LOG-{0000000}</displayFormat>
        <label>ACH Transaction Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ACH Transaction Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>